[build-system]
requires = ["hatchling >= 1.13.0"]
build-backend = "hatchling.build"

[project]
name = "pytorch-utilities"
version = "0.0.1"
description = "Torch-Utils, a library containing all necessary and new DL development utilities using PyTorch."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Arash Hajian nezhad", email = "arash.hajiannezhad@gmail.com" },
]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "torch>=1.8.0,<=2.2",
]

[tool.hatch.build.targets.wheel]
packages = ["torchutils"]

[project.urls]
Homepage = "https://github.com/arawxx/torch-utils"
Repository = "https://github.com/arawxx/torch-utils"